Fix vertical alignment of div.select-menu-label

--- a/modules/custom/az_select_menu/css/az-select-menu.css
+++ b/modules/custom/az_select_menu/css/az-select-menu.css
@@ -44,7 +44,7 @@ select.select-primary {
   }
 
   .input-group .select-menu-label {
-    margin: 0.7em 0.7em 0;
+    margin: 0.4375em 0.7em 0;
   }
   
   select.select-primary:active,
